<resources>
    <string name="app_name">DreamCatcher</string>
    <string name="dream_title_label">Title</string>
    <string name="dream_title_hint">Enter a title for the dream.</string>
    <string name="dream_realized">Realized</string>
    <string name="dream_deferred">Deferred</string>
    <string name="dream_details_label">Details</string>
    <string name="dream_entry_0_button">DREAM REVEALED</string>
    <string name="dream_entry_1_button">DREAM ENTRY 1</string>
    <string name="dream_entry_2_button">DREAM ENTRY 2</string>
    <string name="dream_entry_3_button">DREAM ENTRY 3</string>
    <string name="dream_entry_4_button">DREAM DONE</string>
    <string name="dream_date">Dream Date</string>
    <string name="new_dream">Add Dream</string>
    <string name="delete_all_dreams">Delete All Crimes</string>

    <string name="take_dream_photo">Take Dream Photo</string>
    <string name="share_dream">Share Dream</string>
    <string name="dream_report_subject">Dream Report</string>

    <string name="all_dreams">All Dreams</string>
    <string name="realized_dreams">Realized Dreams</string>
    <string name="active_dreams">Active Dreams</string>
    <string name="deferred_dreams">Deferred Dreams</string>
    <string name="send_report">Send Report</string>
    <string name="add_commite_title">Add a comment</string>
</resources>
